deploy/01-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nms
