deploy/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nms-bff
  namespace: nms
spec:
  type: ClusterIP
  selector:
    app: nms-bff
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: nms-web
  namespace: nms
spec:
  type: ClusterIP
  selector:
    app: nms-web
  ports:
    - name: http
      port: 3000
      targetPort: http
